fix(ons-icon, ons-toolbar-button): fix icon alignment. Closes #1636

--- a/core/css/icon.css
+++ b/core/css/icon.css
@@ -23,7 +23,7 @@ limitations under the License.
   -moz-osx-font-smoothing: grayscale;
 }
 
-.ons-icon--ion {
+:not(ons-toolbar-button) > .ons-icon--ion {
   line-height: 0.75em;
   vertical-align: -25%;
 }
